--- a/css/styles.css
+++ b/css/styles.css
@@ -100,13 +100,10 @@ a:hover {
 }
 
 .project-item {
-    display: flow-root;
     margin: 30px 0;
 }
 .project-item img {
     width: 300px;
-    float: left;
-    margin-right: 20px;
 }
 .resume-section {
     margin-bottom: 50px;
@@ -115,17 +112,12 @@ a:hover {
     border-bottom: 3px groove #AAD8F4;
 }
 .work-item {
-    display: grid;
-    grid-template-columns: 300px 1fr;
-    column-gap: 20px;
     margin: 30px 0;
 }
 .work-details p {
     margin: 0;
 }
-.work-summary p:first-child {
-    margin-top: 0;
-}
+
 
 .education-item p {
     margin: 0;
@@ -139,9 +131,6 @@ a:hover {
 footer {
     background: #AB98B6;
     color: #AAD8F4;
-    display: flex;
-    justify-content: space-between;
-    padding: 0 20px;
 }
 .footer-link {
     color: #82f0d9;
@@ -160,4 +149,82 @@ footer {
 }
 .socials img:hover {
     opacity: 0.5;
+}
+
+/* MEDIA QUERIES
+------------------- */
+@media screen and (min-width: 860px) {
+    .project-item {
+    display: flow-root;
+    }
+    .project-item img {
+    float: left;
+    margin-right: 20px;
+    }
+}
+@media screen and (min-width: 650px) and (max-width: 859px) {
+    .project-wrapper {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 20px;
+    }
+    .project-item img {
+        width: 100%;
+    }
+}
+@media screen and (max-width: 500px) {
+    .project-item img {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+}
+@media screen and (max-width: 1200px) {
+    .download-link {
+        position: absolute;
+    }
+}
+@media screen and (min-width: 860px) {
+    .work-item {
+        display: grid;
+        grid-template-columns: 300px 1fr;
+        column-gap: 20px;
+    }
+    .work-summary p:first-child {
+        margin-top: 0;
+    }
+}
+@media screen and (max-width: 500px) {
+    .resume header::before {
+        height: 200px;
+    }
+    h1 {
+        font-size: 4rem;
+    }
+    h2 {
+        font-size: 2rem;
+    }
+    h3 {
+        font-size: 1.8rem;
+    }
+}
+@media screen and (max-width: 650px) {
+    .home .content-wrapper{
+        padding: 10px;
+    }
+    .content-bg {
+        padding: 20px;
+    }
+}
+@media screen and (min-width: 860px) {
+    footer {
+        display: flex;
+        justify-content: space-between;
+        padding: 0 20px;
+    }
+}
+@media screen and (max-width: 859px) {
+    footer {
+        text-align: center;
+        padding: 10px;
+    }
 }
